// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectGroup renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 100%;
}

.c4 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-top-width: 0px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 100%;
}

.c5 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-top-width: 0px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  height: 100%;
}

.c2 {
  position: relative;
  outline: none;
}

.c2 .Cardstyled__StyledBadgeLineWrapper-sc-1b4w28x-0 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c1 {
  cursor: pointer;
  position: relative;
  z-index: 1;
}

.c1:hover {
  z-index: 2;
}

@media (min-width:512px) {
  .c2:hover .Cardstyled__StyledBadgeLineWrapper-sc-1b4w28x-0,
  .c2:hover .Cardstyled__StyledFeaturedAssetsContainer-sc-1b4w28x-3 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "rounded-small",
            "topRight": "rounded-small",
          }
        }
      >
        <div>
          Option 1
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 2
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 3
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 4
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c5"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "rounded-small",
            "bottomRight": "rounded-small",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectGroup renders direction column 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 100%;
}

.c4 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-top-width: 0px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 100%;
}

.c5 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-top-width: 0px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  height: 100%;
}

.c2 {
  position: relative;
  outline: none;
}

.c2 .Cardstyled__StyledBadgeLineWrapper-sc-1b4w28x-0 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c1 {
  cursor: pointer;
  position: relative;
  z-index: 1;
}

.c1:hover {
  z-index: 2;
}

@media (min-width:512px) {
  .c2:hover .Cardstyled__StyledBadgeLineWrapper-sc-1b4w28x-0,
  .c2:hover .Cardstyled__StyledFeaturedAssetsContainer-sc-1b4w28x-3 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "rounded-small",
            "topRight": "rounded-small",
          }
        }
      >
        <div>
          Option 1
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 2
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 3
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 4
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c5"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "rounded-small",
            "bottomRight": "rounded-small",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectGroup renders with direction row 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-top-left-radius: 4px;
  border-top-right-radius: 0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 0;
  height: 100%;
}

.c4 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-left-width: 0px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  height: 100%;
}

.c5 {
  display: block;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding-top: 32px;
  padding-right: 24px;
  padding-bottom: 32px;
  padding-left: 24px;
  color: #000000;
  border: 1px solid #cfcbca;
  background-color: #fff;
  border-left-width: 0px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  height: 100%;
}

.c2 {
  position: relative;
  outline: none;
}

.c2 .Cardstyled__StyledBadgeLineWrapper-sc-1b4w28x-0 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c1 {
  cursor: pointer;
  position: relative;
  z-index: 1;
}

.c1:hover {
  z-index: 2;
}

@media (min-width:512px) {
  .c2:hover .Cardstyled__StyledBadgeLineWrapper-sc-1b4w28x-0,
  .c2:hover .Cardstyled__StyledFeaturedAssetsContainer-sc-1b4w28x-3 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

<div
  className="c0"
  display="flex"
>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "rounded-small",
            "bottomRight": "sharp",
            "topLeft": "rounded-small",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 1
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 2
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 3
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c4"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "sharp",
            "bottomRight": "sharp",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 4
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    disabled={false}
    onClick={[Function]}
  >
    <div
      className="c2"
    >
      <div
        className="c5"
        display="block"
        elevation={0}
        shape={
          Object {
            "bottomLeft": "rounded-small",
            "bottomRight": "rounded-small",
            "topLeft": "sharp",
            "topRight": "sharp",
          }
        }
      >
        <div>
          Option 5
        </div>
      </div>
    </div>
  </div>
</div>
`;
